syntax = "proto3";
package v1;
option go_package = "github.com/optable/match-cli/api/v1";

import "google/protobuf/timestamp.proto";

message InsightsHistory {
  // Insights on a graph, after expansion

  // Latest computed insights ordered by computation date descendant
  repeated Insights trend = 1;
}

message Insights {
  google.protobuf.Timestamp computed_at = 1;

  // Number of connected components in the graph.
  int64 clusters = 2;

  int64 emails = 3;
  int64 visitor_ids = 4;
  int64 apple_idfas = 5;
  int64 google_gaids = 6;
  int64 custom_ids = 7;
  int64 ipv4s = 8;
  int64 ipv6s = 9;
  int64 samsung_tifas = 10;
  int64 roku_ridas = 11;
  int64 amazon_afais = 12;
  int64 phone_numbers = 13;
}
